# G-Man

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_log.txt  imgui.ini
assets/models/g-man-blacksuit/extracted/: license.txt  scene.gltf
assets/shaders/: default.frag
include/: Camera.h  Light.h  Mesh.h  Model.h  Scene.h  Shader.h
src/: Camera.cpp  Mesh.cpp  Model.cpp  Scene.cpp  Shader.cpp  main.cpp
